--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,7 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#0096f0</color>
-    <color name="colorAccentLighter">#b2e0ef</color>
+    <color name="colorAccentLighter">#d2eaf2</color>
     <color name="color_main_activity_statusbar">#0078f0</color>
     <color name="colorBackground">#fafafa</color>
     <color name="colorButtonGreen">#79da59</color>
