--- a/app/src/main/res/layout/training_details_add_row.xml
+++ b/app/src/main/res/layout/training_details_add_row.xml
@@ -28,9 +28,9 @@
         android:ems="10"
         android:gravity="center_horizontal"
         android:hint="@string/reps_short"
-        android:inputType="numberDecimal"
-        android:selectAllOnFocus="true"
+        android:inputType="numberSigned"
         android:nextFocusDown="@+id/editTextTrainingRowWeight"
+        android:selectAllOnFocus="true"
         app:layout_constraintEnd_toStartOf="@+id/guideline2"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -46,7 +46,7 @@
         android:ems="10"
         android:gravity="center_horizontal"
         android:hint="@string/weight_short"
-        android:inputType="numberDecimal"
+        android:inputType="numberSigned"
         android:nextFocusRight="@id/editTextTrainingRowReps"
         android:selectAllOnFocus="true"
         app:layout_constraintEnd_toStartOf="@+id/guideline3"
