--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="colorButtonRed">#be1f1c</color>
     <color name="colorYellow">#fbff00</color>
     <color name="colorBlack">#000000</color>
+    <color name="light_gray">#dbdbdb</color>
 </resources>
