--- a/app/src/main/res/layout/training_details_add_row.xml
+++ b/app/src/main/res/layout/training_details_add_row.xml
@@ -9,13 +9,12 @@
 
     <Button
         android:id="@+id/buttonTrainingRowRemove"
-        android:layout_width="50dp"
-        android:layout_height="wrap_content"
+        style="@style/buttonRowDelete"
+        android:background="@drawable/delete_button"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
-        android:text="@string/delete"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintBaseline_toBaselineOf="@+id/editTextTrainingRowWeight"
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <EditText
         android:id="@+id/editTextTrainingRowReps"
