--- a/app/src/main/res/layout/activity_diet_product_show.xml
+++ b/app/src/main/res/layout/activity_diet_product_show.xml
@@ -22,7 +22,7 @@
             app:layout_constraintBottom_toBottomOf="@+id/textViewProductName"
             app:layout_constraintStart_toEndOf="@+id/textViewProductName"
             app:layout_constraintTop_toTopOf="@+id/textViewProductName"
-            app:srcCompat="@drawable/icon_verified" />
+            app:srcCompat="@drawable/image_verified" />
 
         <android.support.design.widget.AppBarLayout
             android:id="@+id/appBarLayout"
