--- a/app/src/main/res/layout/activity_training_details.xml
+++ b/app/src/main/res/layout/activity_training_details.xml
@@ -219,7 +219,7 @@
             style="@style/roundButton"
             android:layout_marginLeft="16dp"
             android:layout_marginStart="16dp"
-            android:background="@drawable/start_button"
+            android:background="@drawable/button_start"
             android:onClick="onClick"
             android:text="@string/start"
             app:layout_constraintBottom_toBottomOf="@+id/textViewTime"
@@ -252,11 +252,11 @@
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_centerInParent="true"
-            android:background="@drawable/drawable_circle_light_blue"
+            android:background="@drawable/progressbar_circle_light_blue"
             android:indeterminate="false"
             android:max="100"
             android:progress="100"
-            android:progressDrawable="@drawable/drawable_circle_blue"
+            android:progressDrawable="@drawable/progressbar_circle_blue"
             android:rotation="-90"
             app:layout_constraintBottom_toBottomOf="@+id/textViewTime"
             app:layout_constraintEnd_toStartOf="@+id/textViewTime"
