--- a/app/src/main/res/menu/menu_training_exercise_search.xml
+++ b/app/src/main/res/menu/menu_training_exercise_search.xml
@@ -4,7 +4,7 @@
     tools:context="com.brus5.lukaszkrawczak.fitx.Training.TrainingActivity">
     <item
         android:id="@+id/menu_search_exercise"
-        android:icon="@drawable/search_icon"
+        android:icon="@drawable/image_search"
         android:title="@string/search"
         app:showAsAction="always" />
 </menu>
