--- a/app/src/main/res/layout/activity_diet_product_search.xml
+++ b/app/src/main/res/layout/activity_diet_product_search.xml
@@ -16,7 +16,7 @@
             android:id="@+id/toolbarDietSearchActivity"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/color_main_activity_statusbar"
+            android:background="@color/colorPrimary"
             app:popupTheme="@style/AppTheme.PopupOverlay" />
     </android.support.design.widget.AppBarLayout>
 
