--- a/app/src/main/res/layout/activity_training_list.xml
+++ b/app/src/main/res/layout/activity_training_list.xml
@@ -15,7 +15,7 @@
             android:id="@+id/toolbarTrainingExcerciseList"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/color_main_activity_statusbar"
+            android:background="@color/colorPrimary"
             app:popupTheme="@style/AppTheme.PopupOverlay" />
     </android.support.design.widget.AppBarLayout>
 
